--- a/app/src/main/res/layout/dialog_server_error.xml
+++ b/app/src/main/res/layout/dialog_server_error.xml
@@ -54,11 +54,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/content_connection_error"
+            android:tint="@color/colorAccent"
             app:layout_constraintBottom_toTopOf="@id/tvServerErrorLabel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.8"
-            app:srcCompat="@drawable/ic_server_error" />
+            app:srcCompat="@drawable/ic_realty_home_big" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
