--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,7 +14,8 @@
 
     <dimen name="image_height_220">220dp</dimen>
 
-    <dimen name="button_height">55dp</dimen>
+    <dimen name="button_height_36">36dp</dimen>
+    <dimen name="button_height_55">55dp</dimen>
     <dimen name="edit_text_height">56dp</dimen>
     <dimen name="edit_text_request_height">50dp</dimen>
 
