--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,7 +13,7 @@
         <include layout="@layout/toolbar_with_icon" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvRequestsList"
+            android:id="@+id/rvList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_category" />
