--- a/app/src/main/res/layout/item_comparison.xml
+++ b/app/src/main/res/layout/item_comparison.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvDialogTitle"
+    android:id="@+id/tvComparisonTitle"
     style="@style/Text.16"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:drawablePadding="@dimen/default_margin_32"
     android:foreground="?selectableItemBackgroundBorderless"
     android:padding="@dimen/default_margin_16"
-    tools:drawableStart="@drawable/ic_request_new"
-    tools:text="@string/label_new_comparison" />
+    tools:text="Сравнение №1" />
