--- a/app/src/main/res/layout/item_comparison.xml
+++ b/app/src/main/res/layout/item_comparison.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvComparisonTitle"
-    style="@style/Text.16"
+    android:id="@+id/swipeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?selectableItemBackgroundBorderless"
-    android:padding="@dimen/default_margin_16"
-    tools:text="Сравнение №1" />
+    android:orientation="vertical"
+    android:padding="@dimen/default_margin_16">
+
+    <TextView
+        android:id="@+id/tvComparisonTitle"
+        style="@style/Text.16"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Сравнение №1" />
+
+    <TextView
+        android:id="@+id/tvComparisonDate"
+        style="@style/Text.Hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="16.02.17" />
+
+</LinearLayout>
