--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="colorStatusBar">#FFFFFF</color>
     <color name="colorText">#212121</color>
     <color name="colorHint">#757575</color>
-    <color name="colorError">#F44336</color>
+    <color name="colorRed">#F44336</color>
     <color name="colorDarkError">#DB4437</color>
     <color name="colorView">#C4C4C4</color>
     <color name="colorLightView">#E0E5E5E5</color>
