--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,7 +13,8 @@
 
         <item
             android:id="@+id/tab_favorites"
-            android:icon="@drawable/ic_bottom_bar_requests"
+            android:icon="@drawable/ic_favorite_fill"
+            android:iconTint="@color/colorLightHint"
             android:title="@string/tab_favorites" />
 
     </group>
