--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         style="@style/Text.Bold.White.16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
