--- a/app/src/main/res/layout/fragment_connection_error.xml
+++ b/app/src/main/res/layout/fragment_connection_error.xml
@@ -50,7 +50,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvConnectionErrorDescription"
             app:layout_constraintWidth_percent="0.4" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/content_connection_error"
