--- a/app/src/main/res/layout/fragment_view_media_files.xml
+++ b/app/src/main/res/layout/fragment_view_media_files.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivViewClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
