--- a/app/src/main/res/layout/toolbar_with_logo.xml
+++ b/app/src/main/res/layout/toolbar_with_logo.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             style="@style/Text.Bold.White.16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
